# meego-panel-myzone

./: .gitignore  Makefile.am  configure.ac  penge.pc.in
.tx/: config
capplet/: myzone-cc-panel.c
data/: Makefile.am
penge/: Makefile.am  penge-everything-pane.c  penge-grid-view.c  penge-interesting-tile.c  penge-people-tile.c  penge-utils.c  penge-utils.h
po/: ar.po  ast.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  en_US.po  es.po  es_MX.po  eu.po  fa.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  km.po  ko.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  vi.po  (+3 more)
src/: meego-panel-myzone.c
